# wavy

./: .gitignore  LICENSE  README.markdown  blog-post.markdown  braindump.stream  stack.yaml  wavy.cabal
Sound/: Wav.hs
Sound/Wav/: Assemble.hs  AudioFormats.hs  Binary.hs  ChannelData.hs  Constants.hs  Core.hs  Data.hs  Info.hs  List.hs  Parse.hs  Scale.hs  WaveFormat.hs
src/: Generate.hs  Identity.hs  Info.hs  Main.hs  SineGenerator.hs  Splitter.hs  VectorUtils.hs
