name: wavy
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) 2013-2014 Robert Massaioli <robertmassaioli@gmail.com>
maintainer: Robert Massaioli <robertmassaioli@gmail.com>
homepage: http://bitbucket.org/robertmassaioli/wavy
bug-reports: http://bitbucket.org/robertmassaioli/wavy/issues
synopsis: Process WAVE files in Haskell.
description:
    Wavy was designed to be a fast and efficient method of extracting and writing PCM
    data to and from WAV files. It is here to help you make fast use of Audio
    data in your Haskell programs and thus encourage many more audio projects in Haskell.
category: Sound
author: Robert Massaioli <robertmassaioli@gmail.com>

library
    exposed-modules:
        Sound.Wav
        Sound.Wav.ChannelData
    build-depends:
        base >=4.5 && <5.0,
        riff >=0.3 && <0.4,
        binary ==0.7.*,
        bytestring >=0.10.0.2 && <0.11,
        split >=0.2.2 && <0.3,
        containers >=0.5.0.0 && <0.6,
        vector >=0.10.0.1 && <0.11
    other-modules:
        Sound.Wav.Data
        Sound.Wav.Assemble
        Sound.Wav.Parse
        Sound.Wav.Info
        Sound.Wav.AudioFormats
        Sound.Wav.WaveFormat
        Sound.Wav.Constants
        Sound.Wav.Binary
        Sound.Wav.Scale
    ghc-options: -W

executable wave-identity
    main-is: Identity.hs
    build-depends:
        base >=4.5 && <5.0,
        split >=0.2.2 && <0.3,
        pretty-show -any,
        wavy -any
    hs-source-dirs: src

executable wave-info
    main-is: Info.hs
    build-depends:
        base >=4.5 && <5.0,
        bytestring >=0.10.0.2 && <0.11,
        wavy -any
    hs-source-dirs: src

executable wave-split
    main-is: Splitter.hs
    build-depends:
        base >=4.5 && <5.0,
        wavy -any,
        split >=0.2.2 && <0.3,
        vector >=0.10.0.1 && <0.11,
        filepath >=1.3.0.1 && <1.4
    hs-source-dirs: src
    other-modules:
        VectorUtils
    ghc-options: -rtsopts

executable wave-generate-sine
    main-is: Generate.hs
    build-depends:
        base >=4.5 && <5.0,
        wavy -any,
        vector >=0.10.0.1 && <0.11,
        bytestring >=0.10.0.2 && <0.11
    hs-source-dirs: src
    other-modules:
        SineGenerator
    ghc-options: -rtsopts

